2006-04-09 Carlos Nieves Onega <cnieves@iespana.es>

	* src/gsymcheck.c: Enable logging when the filename specified couldn't
	be found. Thanks to Hans for reporting the bug and providing the patch.
	This fixes bug 1452836.
	
2006-03-12 Ales Hvezda   <ahvezda@geda.seul.org>

        * lib/system-gsymcheckrc.in: Removed load for the system-gafrc file,
        since it is loaded by libgeda first.

2006-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped package version to 20060123

        * README: Updated for the new year and release.

2005-11-27 Carlos Nieves Onega <cnieves@iespana.es>
	* src/globals.c: Added setting of load_newer_backup_func to NULL.
	It is needed now libgeda checks for autosave backup files when
	opening a schematic.
	
2005-09-27 18:51  Dan McMahill <danmc>

        * src/s_check.c: remove various compiler warnings

2005-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped the package version to 20050820 which will be
        a real snapshot.

2005-08-14 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated package version to 20050814.  This is a 
        temporary version and not a real release number.

2005-03-13 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Removed all tests for gtk+ 1.2.x and fixed error 
        message if gtk+ 2.2.x is not found.

2005-03-08 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version to 20050313

2005-03-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gsymcheck.c: Fixed code to allow user to specify absolute
        filenames on the command line again.

2005-02-26 01:14  Dan McMahill <danmc>

	* src/: gsymcheck.c, s_check.c: remove a handful of compiler
	  warnings

2005-02-22  Carlos Nieves Onega <cnieves@iespana.es>

	* configure.ac, src/gsymcheck.c: Removed call to gtk_init().
	  GDK is now initialized in libgeda if it's a non-graphical app.
	
2005-02-20  Patrick Bernaud  <b-patrick@wanadoo.fr>
